--- a/src/templates/upload.tmpl
+++ b/src/templates/upload.tmpl
@@ -3,5 +3,9 @@
     <title>Upload<</title>
   </head>
   <body>
+  <form aaction="http://localhost:8080/user/uploadfile" enctype="multipart/form-data" method="POST">
+  Upload SLA-file here
+  <input type="file" name="file">
+  <button type="submit">Send</button>
   </body>
   </html>
