--- a/src/templates/index.tmpl
+++ b/src/templates/index.tmpl
@@ -1,8 +1,3 @@
-<html>
-<head>
-  <title>Index</title>
-</head>
-<body>
+{{template header.tmpl}}
   Hej - jeg er index
-</body>
-</html>
+{{template footer.tmpl}}
